@@ -321,6 +321,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15544) Non-index entry points cause the "Wiki not set up" message to
   have corrupt URLs
 * (bug 5101) Image from Commons doesn't show up when searched in Wikipedia search box
+* (bug 4362) [[MediaWiki:History copyright]] no more used with most recent
+  revision when passing oldid parameter in the url
 
 === API changes in 1.14 ===
 
